Remove an unused variable

This declaration of retval was never used, only the one in the sub-block is.
Remove it to silence a gcc warning

https://bugzilla.gnome.org/show_bug.cgi?id=643325